@@ -18,10 +18,8 @@
 
 package org.apache.zookeeper.server.quorum.flexible;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileReader;
 import java.io.IOException;
 import java.util.HashSet;
 import java.util.HashMap;
