@@ -19,7 +19,6 @@
 package org.apache.zookeeper.server.upgrade;
 
 import java.io.BufferedInputStream;
-import java.io.ByteArrayInputStream;
 import java.io.EOFException;
 import java.io.File;
 import java.io.FileInputStream;
